gccida/g3/ggc_alloc
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1331:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v12; // rbp 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1334:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *next; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1336:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v17; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1340:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *free_pages; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1341:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v23; // r8 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1346:1: error: unknown type name 'page_group_0'; did you mean 'page_group'?
page_group_0 *v28; // r10 
^~~~~~~~~~~~
page_group
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:267:3: note: 'page_group' declared here
} page_group;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1349:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v31; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1358:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 **v40; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1369:1: error: unknown type name 'page_group_0'; did you mean 'page_group'?
page_group_0 *v51; // rax 
^~~~~~~~~~~~
page_group
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:267:3: note: 'page_group' declared here
} page_group;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1370:1: error: unknown type name 'page_group_0'; did you mean 'page_group'?
page_group_0 *page_groups; // r15 
^~~~~~~~~~~~
page_group
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:267:3: note: 'page_group' declared here
} page_group;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1371:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v53; // rdx 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1406:28: error: subscripted value is not an array, pointer, or vector
v1 = *(long long *)0x9B8098[v2]; 
                   ~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1474:23: error: expected expression
v23 = ( page_entry_0 *)( &G + 2640); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1474:9: error: use of undeclared identifier 'page_entry_0'
v23 = ( page_entry_0 *)( &G + 2640); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1508:23: error: expected expression
v28 = ( page_group_0 *)entry; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1508:9: error: use of undeclared identifier 'page_group_0'
v28 = ( page_group_0 *)entry; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1554:23: error: expected expression
v28 = ( page_group_0 *)&v47[v44 - v50]; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1554:9: error: use of undeclared identifier 'page_group_0'
v28 = ( page_group_0 *)&v47[v44 - v50]; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/ggc-page.c:1559:23: error: expected expression
v28 = ( page_group_0 *)( ( char *)v28 + v65); 
                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ggc_alloc/src/obj/ggc-page.o] Error 1
